<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="quick_add"
        android:enabled="true"
        android:icon="@drawable/sc_add"
        android:shortcutShortLabel="@string/sc_quick_add_short"
        android:shortcutLongLabel="@string/sc_quick_add_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.wkhan.hexis"
            android:targetClass="com.wkhan.hexis.widget.QuickCaptureActivity"
            android:data="hexis://add" />
    </shortcut>
    <shortcut
        android:shortcutId="open_today"
        android:enabled="true"
        android:icon="@drawable/sc_today"
        android:shortcutShortLabel="@string/sc_today_short"
        android:shortcutLongLabel="@string/sc_today_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.wkhan.hexis"
            android:targetClass="com.wkhan.hexis.MainActivity"
            android:data="hexis://today" />
    </shortcut>
    <shortcut
        android:shortcutId="open_donext"
        android:enabled="true"
        android:icon="@drawable/sc_donext"
        android:shortcutShortLabel="@string/sc_donext_short"
        android:shortcutLongLabel="@string/sc_donext_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.wkhan.hexis"
            android:targetClass="com.wkhan.hexis.MainActivity"
            android:data="hexis://donext" />
    </shortcut>
    <shortcut
        android:shortcutId="open_focus"
        android:enabled="true"
        android:icon="@drawable/sc_focus"
        android:shortcutShortLabel="@string/sc_focus_short"
        android:shortcutLongLabel="@string/sc_focus_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.wkhan.hexis"
            android:targetClass="com.wkhan.hexis.MainActivity"
            android:data="hexis://focus" />
    </shortcut>
    <!-- Periodic Notes — a new blank note, and today's daily note. -->
    <shortcut
        android:shortcutId="new_note"
        android:enabled="true"
        android:icon="@drawable/sc_note"
        android:shortcutShortLabel="@string/sc_new_note_short"
        android:shortcutLongLabel="@string/sc_new_note_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.wkhan.hexis"
            android:targetClass="com.wkhan.hexis.MainActivity"
            android:data="hexis://note" />
    </shortcut>
    <shortcut
        android:shortcutId="daily_note"
        android:enabled="true"
        android:icon="@drawable/sc_daily"
        android:shortcutShortLabel="@string/sc_daily_note_short"
        android:shortcutLongLabel="@string/sc_daily_note_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.wkhan.hexis"
            android:targetClass="com.wkhan.hexis.MainActivity"
            android:data="hexis://daily" />
    </shortcut>
    <!-- Phase F — jump straight into today's "Close the day" flow. -->
    <shortcut
        android:shortcutId="close_day"
        android:enabled="true"
        android:icon="@drawable/sc_close_day"
        android:shortcutShortLabel="@string/sc_close_day_short"
        android:shortcutLongLabel="@string/sc_close_day_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.wkhan.hexis"
            android:targetClass="com.wkhan.hexis.MainActivity"
            android:data="hexis://closeday" />
    </shortcut>
</shortcuts>
